--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.datasource.url = jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username=dbuser
 spring.datasource.password=12345
 
-hibernate.show_sql=true
-hibernate.jdbc.time_zone=UTC
+spring.jpa.hibernate.show_sql=true
+spring.jpa.hibernate.jdbc.time_zone=UTC
