--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.driverClassName = org.postgresql.Driver
 spring.datasource.url = jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username=dbuser
 spring.datasource.password=12345
+
+server.port=9090
